fixes placeholder text layout issue, reposition elements

--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,10 @@ body {
 .main .main-inner {
   margin: 40px 15px 0;
 }
+.user-profile-wrapper {
+  position: absolute;
+  width: 100%;
+}
 .user-profile {
   display: table;
   margin: auto;
@@ -119,7 +123,9 @@ body {
   padding: 0 10px;
 }
 .statement {
-  margin-top: 22px;
+  position: absolute;
+  top: 107px;
+  width: 100%;
 }
 .statement span,
 .days-count {
@@ -128,6 +134,7 @@ body {
   text-transform: uppercase;
   color: #fff;
   text-shadow: 3px 4px 11px rgba(0, 0, 0, 0.89);
+
 }
 .statement span {
   font-size: 2.5em;
@@ -149,6 +156,9 @@ body {
 .days-count {
   font-size: 3.9em;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.89);
+  position: absolute;
+  top: 242;
+  width: 100%;
 }
 .days-count .count {
   position: relative;
